[package]
name = "w_ots"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = { version = "0.10.4", default-features = false }
rand = { version = "0.8.5", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
thiserror = "1.0"

[features]
default = [ "std" ]
std = [
  "blake2/std",
  "rand/std",
  "sha3/std",
]
